--- a/styles.css
+++ b/styles.css
@@ -553,6 +553,10 @@ button:hover {
     font-weight: 800;
 }
 
+.mb-2{
+    column-gap: .5rem;
+}
+
 .mostrarMasButton {
     border-radius: 20px;
     color: white;
@@ -560,12 +564,11 @@ button:hover {
     margin-left: .3rem;
     padding: 10px;
     margin-bottom: .3rem;
-    box-shadow: 0 0px 8px rgba(0, 0, 0, 0.3); /* Ajusta los valores según tus preferencias */
+    box-shadow: 0 0px 8px rgba(0, 0, 0, 0.135); /* Ajusta los valores según tus preferencias */
 }
 
 .input-group-text{
     width: 100%;
-    border-radius: 5px 5px 0 0;
     background-color: cornflowerblue;
     color: white;
     justify-content: center;
@@ -574,6 +577,20 @@ button:hover {
 
 .input-group-text > i{
     font-size: 1rem;
+}
+
+.card-body-medidas{
+    box-shadow: 0 0px 5px rgba(0, 0, 0, 0.3);
+    border: 1px solid grey;
+    border-radius: 10px;
+    padding-inline: 1rem;
+    padding-bottom: .5rem;
+    padding-top: .5rem;
+    margin-bottom: 5px;
+}
+
+.bultoImput{
+    margin-bottom: 0 !important;
 }
 
 /* FIN BULTOS */
