--- a/styles.css
+++ b/styles.css
@@ -605,6 +605,10 @@ button:hover {
     margin-bottom: 5px;
 }
 
+.andesmarBNA{
+    margin-top: 2rem !important;
+}
+
 /* FIN BULTOS */
 
 /* NAVBAR */
