--- a/styles.css
+++ b/styles.css
@@ -928,6 +928,7 @@ margin-bottom: -1rem;
     color: red;
     font-weight: 900;
     font-size: 1.2rem;
+    font-family: "Chakra Petch", sans-serif;
 }
 
 .surprise{
