--- a/styles.css
+++ b/styles.css
@@ -1478,6 +1478,12 @@ div.card-body > p > i{
     padding-left: 5px;
 }
 
+#bna2 {
+    width: 70px;
+    padding-left: 5px;
+    filter: brightness(0) invert(1);
+}
+
 .simbel{
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
@@ -1694,6 +1700,25 @@ div.card-body > p > i{
     right: 10px;
     border: solid 2px cornflowerblue;
     background-color: white;
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
+    font-weight: bold; 
+    overflow: hidden;
+}
+
+.em-state-bna2{
+    font-family: "Reddit Sans Condensed", sans-serif;
+    font-size: 1rem;
+    height: 30px;
+    padding-inline: 5px;
+    padding: 5px;
+    border-radius: 10px;
+    position: absolute;
+    top: -15px; 
+    right: 10px;
+    color: white;
+    background-color: cornflowerblue;
     display: flex; 
     align-items: center; 
     justify-content: center;
