--- a/styles.css
+++ b/styles.css
@@ -555,10 +555,11 @@ button:hover {
 }
 
 .tipoElectrodomesticoBna{
+    font-family: "Roboto", sans-serif;
     color: grey;
     border: 1px solid grey;
     border-radius: 4px;
-    font-weight: 800;
+    font-weight: 600;
     margin-bottom: 5px;
 }
 
@@ -1232,7 +1233,7 @@ p.card-text:nth-child(9){
 }
 
 .orden{
-    font-family: "Chakra Petch", sans-serif !important;
+    font-family: "Roboto", sans-serif;
     font-size: x-large;
     font-weight: 800;
     margin: 0;
@@ -1609,7 +1610,7 @@ div.card-body > p > i{
 }
 
 .em-circle-state-time {
-    font-family: "Reddit Sans Condensed", sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 800;
     font-size: .9rem;
     padding: 8px 10px;
@@ -1625,7 +1626,7 @@ div.card-body > p > i{
 }
 
 .em-circle-state-time-facturado {
-    font-family: "Reddit Sans Condensed", sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 800;
     font-size: .9rem;
     margin-bottom: 5px;
@@ -1863,7 +1864,7 @@ div.card-body > p > i{
 }
 
 .numeroDeEnvioGeneradoBNA {
-    font-family: "Chakra Petch", sans-serif !important;
+    font-family: "Roboto", sans-serif;
     margin-bottom: 5px !important;
     text-align: center;
     color: #2c3e50; 
