--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ form {
 }
 
 .six{
-    background-color: dashed;
+    background-color: cornflowerblue;
     border-radius: 10px;
     padding: .3rem;
     margin-bottom: .5rem;
