--- a/styles.css
+++ b/styles.css
@@ -1764,7 +1764,7 @@ div.card-body > p > i{
     top: -15px; 
     right: 10px;
     color: white;
-    background-color: cornflowerblue;
+    background-color: indigo;
     display: flex; 
     align-items: center; 
     justify-content: center;
