--- a/styles.css
+++ b/styles.css
@@ -2496,5 +2496,12 @@ div.card-body > p > i{
     font-weight: bold;
 }
 
+.valor-columna {
+    color: green !important;
+    font-weight: bold; 
+    text-align: right; 
+}
 
-
+.remito-columna{
+    font-weight: bold; 
+}
