--- a/styles.css
+++ b/styles.css
@@ -2512,32 +2512,36 @@ div.card-body > p > i{
     font-weight: bold; 
 }
 
-.icon-despacho{
-    font-size: 1.1rem;
-    text-align: center;
+.tiempo-transcurrido {
+    background-color: #f9f9f9;
+    padding: 0.6rem 1.2rem;
+    border-radius: 15px;
+    display: inline-flex;
+    align-items: center;
+    margin-left: 10px;
+    font-size: 0.9em;
+    font-weight: 800;
+    color: #2c3e50;
+    border: 1px solid #bdc3c7;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+    animation: pulse 1.5s infinite;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-.pendiente-despacho {
-    position: relative;
-}
-
-.pendiente-despacho::before {
-    content: '⏰'; 
-    position: absolute;
-    left: -185px; 
-    font-size: 20px; 
-    top: 12px;
-    animation: pulse 1.5s infinite; 
+.tiempo-transcurrido:hover {
+    background-color: #eaeaea;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 @keyframes pulse {
-    0% {
+    0%, 100% {
         transform: scale(1);
     }
     50% {
-        transform: scale(1.2);
+        transform: scale(1.1);
     }
-    100% {
-        transform: scale(1);
-    }
+}
+
+.icono-tiempo {
+    margin-right: 5px;
 }
